[server] Update OpenAPI spec, add /users/@me/avatar & /users/{idOrName}/avatar endpoints
